[package]
name = "goobie-mysql"
version = "0.2.0"
edition = "2021"

[lib]
name = "gmsv_goobie_mysql"
crate-type = ["cdylib"]

[dependencies]
gmod = { git = "https://github.com/Srlion/gmod-rs.git", rev = "459c107" }
tokio = { version = "1.40.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
anyhow = "1.0.89"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "rust_decimal",
    "chrono",
] }
atomic_enum = "0.3.0"
openssl-sys = { version = "0.9.103", features = ["vendored"] }
constcat = "0.5.1"
tokio-util = { version = "0.7.12", features = ["rt"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
