[package]
name = "goobie-mysql"
version = "1.0.0"
edition = "2021"

[lib]
name = "gmsv_goobie_mysql"
crate-type = ["cdylib"]

[dependencies]
gmod = { git = "https://github.com/Srlion/gmod-rs.git", rev = "c17e91c" }
tokio = { version = "1.43.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
anyhow = "1.0.96"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "rust_decimal",
    "chrono",
] }
atomic_enum = "0.3.0"
openssl-sys = { version = "0.9.106", features = ["vendored"] }
const_format = "0.2.34"
tokio-util = { version = "0.7.13", features = ["rt"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
